tests/baselines/reference/project/nestedDeclare/node/nestedDeclare.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
consume.ts(4,21): error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== consume.ts (1 errors) ====
    declare module "math" 
    {
        import blah = require("blah");
        export function baz();
                        ~~~
!!! error TS7010: 'baz', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    declare module "blah"
    {
    }
    